@@ -1,7 +1,7 @@
 <?php
 
 /*
- * This scripts converts tables to myisam , innodb dynamic or innodb compressed. Run like this : php convert_mysql_tables.php dinnodb
+ * This script converts tables to myisam , innodb dynamic or innodb compressed, or tokudb. Run like this : php convert_mysql_tables.php dinnodb
  */
 
 require_once(dirname(__FILE__)."/../../../www/config.php");
